исправление замечаний + финальная сборка
