# individuals-api/openapi/individuals-api.yaml
@@ -10,6 +10,10 @@ servers:
 tags:
   - name: person-service
     description: Взаимодействие с сервисом пользователей
+  - name: wallet-service
+    description: Взаимодействие с кошельками пользователей
+  - name: transaction-service
+    description: Транзакции пользователей
   - name: auth
     description: Регистрация пользователя
 
@@ -136,7 +140,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
-
 
   /api/v1/individuals/{individualId}:
     get:
@@ -267,6 +270,180 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
+
+  /api/v1/wallets:
+    post:
+      tags: [ wallet-service ]
+      summary: Создание кошелька пользователя
+      operationId: createWallet
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CreateWalletRequest'
+      responses:
+        '201':
+          description: Кошелёк успешно создан
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/WalletResponse'
+        '400':
+          description: Ошибка валидации
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+
+  /api/v1/wallets/{walletUid}:
+    get:
+      tags: [ wallet-service ]
+      summary: Получение информации о кошельке
+      operationId: getWalletById
+      parameters:
+        - name: walletUid
+          in: path
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        '200':
+          description: Данные кошелька
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/WalletResponse'
+        '404':
+          description: Кошелёк не найден
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+
+  /api/v1/wallets/user/{userUid}:
+    get:
+      tags: [ wallet-service ]
+      summary: Получение всех кошельков пользователя
+      operationId: getWalletByUserId
+      parameters:
+        - name: userUid
+          in: path
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        '200':
+          description: Список кошельков пользователя
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/WalletResponse'
+
+  /api/v1/transactions/init:
+    post:
+      tags: [ transaction-service ]
+      summary: Инициализация транзакции (без создания)
+      operationId: transactionInit
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/TransactionInitRequest'
+
+      responses:
+        '200':
+          description: Условия транзакции
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/TransactionInitResponse'
+        '400':
+          description: Ошибка валидации
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+
+  /api/v1/transactions/confirm:
+    post:
+      tags: [ transaction-service ]
+      summary: Подтверждение и запуск транзакции
+      operationId: transactionConfirm
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/TransactionConfirmRequest'
+              oneOf:
+                - $ref: '#/components/schemas/DepositConfirmRequest'
+                - $ref: '#/components/schemas/WithdrawalConfirmRequest'
+                - $ref: '#/components/schemas/TransferConfirmRequest'
+      responses:
+        '200':
+          description: Транзакция подтверждена
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/TransactionConfirmResponse'
+        '400':
+          description: Ошибка подтверждения
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+
+  /api/v1/transactions/{transactionId}/status:
+    get:
+      tags: [ transaction-service ]
+      summary: Получение статуса транзакции
+      operationId: getTransactionsStatusById
+      parameters:
+        - name: transactionId
+          in: path
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        '200':
+          description: Статус и детали транзакции
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/TransactionStatusResponse'
+        '404':
+          description: Транзакция не найдена
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+
+  /api/v1/transactions:
+    get:
+      tags: [ transaction-service ]
+      summary: Поиск транзакций по фильтрам с пагинацией
+      operationId: getTransactionsByFilter
+      parameters:
+        - in: query
+          name: transactionFilterRequest
+          schema:
+            $ref: '#/components/schemas/TransactionFilterRequest'
+      responses:
+        '200':
+          description: Список транзакций
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/TransactionStatusResponse'
 
 
 components:
@@ -433,3 +610,300 @@ components:
           type: string
         status:
           type: integer
+
+    CreateWalletRequest:
+      type: object
+      properties:
+        name:
+          type: string
+        walletTypeUid:
+          type: string
+          format: uuid
+        userUid:
+          type: string
+          format: uuid
+      required: [ name, walletTypeUid, userUid ]
+
+    TransactionInitRequest:
+      oneOf:
+        - $ref: '#/components/schemas/TransferInitRequest'
+        - $ref: '#/components/schemas/DepositInitRequest'
+        - $ref: '#/components/schemas/WithdrawalInitRequest'
+      discriminator:
+        propertyName: type
+        mapping:
+          DEPOSIT: '#DepositInitRequest'
+          TRANSFER: '#TransferInitRequest'
+          WITHDRAWAL: '#WithdrawalInitRequest'
+
+    DepositInitRequest:
+      type: object
+      properties:
+        type:
+          type: string
+        userUid:
+          type: string
+          format: uuid
+        walletUid:
+          type: string
+          format: uuid
+        amount:
+          type: number
+      required: [ type, userUid, walletUid, amount ]
+
+    TransferInitRequest:
+      type: object
+      properties:
+        type:
+          type: string
+        userUid:
+          type: string
+          format: uuid
+        walletUid:
+          type: string
+          format: uuid
+        amount:
+          type: number
+        targetWalletUid:
+          type: string
+          format: uuid
+        targetUserUid:
+          type: string
+          format: uuid
+      required: [ type, userUid, walletUid, amount, targetWalletUid, targetUserUid ]
+
+    WithdrawalInitRequest:
+      type: object
+      properties:
+        type:
+          type: string
+        userUid:
+          type: string
+          format: uuid
+        walletUid:
+          type: string
+          format: uuid
+        amount:
+          type: number
+      required: [ type, userUid, walletUid, amount ]
+
+    TransactionConfirmRequest:
+      type: object
+      oneOf:
+        - $ref: '#/components/schemas/TransferConfirmRequest'
+        - $ref: '#/components/schemas/DepositConfirmRequest'
+        - $ref: '#/components/schemas/WithdrawalConfirmRequest'
+      discriminator:
+        propertyName: type
+        mapping:
+          DEPOSIT: '#DepositConfirmRequest'
+          TRANSFER: '#TransferConfirmRequest'
+          WITHDRAWAL: '#WithdrawalConfirmRequest'
+
+    DepositConfirmRequest:
+      type: object
+      properties:
+        type:
+          type: string
+        userUid:
+          type: string
+          format: uuid
+        walletUid:
+          type: string
+          format: uuid
+        amount:
+          type: number
+        comment:
+          type: string
+      required: [ type, userUid, walletUid, amount ]
+
+    WithdrawalConfirmRequest:
+      type: object
+      properties:
+        type:
+          type: string
+        userUid:
+          type: string
+          format: uuid
+        walletUid:
+          type: string
+          format: uuid
+        amount:
+          type: number
+        comment:
+          type: string
+      required: [ type, userUid, walletUid, amount ]
+
+    TransferConfirmRequest:
+      type: object
+      properties:
+        type:
+          type: string
+        userUid:
+          type: string
+          format: uuid
+        walletUid:
+          type: string
+          format: uuid
+        amount:
+          type: number
+        targetWalletUid:
+          type: string
+          format: uuid
+        targetUserUid:
+          type: string
+          format: uuid
+        comment:
+          type: string
+      required: [ type, userUid, walletUid, amount, targetWalletUid, targetUserUid ]
+
+    TransactionFilterRequest:
+      type: object
+      properties:
+        filter:
+          $ref: '#/components/schemas/Params'
+        pageable:
+          $ref: '#/components/schemas/Pageable'
+      required: [ pageable, filter ]
+
+    Params:
+      type: object
+      properties:
+        userUid:
+          type: string
+          format: uuid
+        walletUid:
+          type: string
+          format: uuid
+        type:
+          type: string
+          enum: [ DEPOSIT, WITHDRAWAL, TRANSFER ]
+        status:
+          type: string
+          enum: [ PENDING, FAILED, COMPLETED ]
+        dateFrom:
+          type: string
+          format: date-time
+        dateTo:
+          type: string
+          format: date-time
+
+    Pageable:
+      type: object
+      properties:
+        page:
+          type: integer
+          default: 0
+        size:
+          type: integer
+          default: 20
+
+    WalletResponse:
+      type: object
+      properties:
+        uid:
+          type: string
+          format: uuid
+        name:
+          type: string
+        type:
+          $ref: "#/components/schemas/WalletTypeResponse"
+        userUid:
+          type: string
+          format: uuid
+        status:
+          type: string
+        balance:
+          type: number
+        archivedAt:
+          type: string
+          format: date-time
+        createdAt:
+          type: string
+          format: date-time
+        updatedAt:
+          type: string
+          format: date-time
+
+    TransactionInitResponse:
+      type: object
+      properties:
+        walletUid:
+          type: string
+          format: uuid
+        targetWalletUid:
+          type: string
+          format: uuid
+        amount:
+          type: number
+        fee:
+          type: number
+
+
+    TransactionConfirmResponse:
+      type: object
+      properties:
+        uid:
+          type: string
+          format: uuid
+        userUid:
+          type: string
+          format: uuid
+        walletUid:
+          type: string
+          format: uuid
+        amount:
+          type: number
+        type:
+          type: string
+        status:
+          type: string
+        comment:
+          type: string
+        fee:
+          type: number
+        targetWalletUid:
+          type: string
+          format: uuid
+        failureReason:
+          type: string
+        createdAt:
+          type: string
+          format: date-time
+        updatedAt:
+          type: string
+          format: date-time
+
+    TransactionStatusResponse:
+      type: object
+      properties:
+        uid:
+          type: string
+          format: uuid
+        type:
+          type: string
+        status:
+          type: string
+        failureReason:
+          type: string
+        createdAt:
+          type: string
+          format: date-time
+        updatedAt:
+          type: string
+          format: date-time
+
+    WalletTypeResponse:
+      type: object
+      properties:
+        uid:
+          type: string
+          format: uuid
+        name:
+          type: string
+        currencyCode:
+          type: string
+        status:
+          type: string
+        userType:
+          type: string
